Fixes table display not to overlap the toolbar.

--- a/tool-ui/src/main/webapp/style/v3/rte2.less
+++ b/tool-ui/src/main/webapp/style/v3/rte2.less
@@ -5,9 +5,9 @@
   padding:0.5em;
   background-color: fade(white, 93%);
   border:1px solid @color-separator;
-  z-index:3;
+  z-index:4;
   &:hover {
-    z-index: 4;
+    z-index: 5;
   }
       
   li {
@@ -47,12 +47,12 @@
   .rte2-wrapper > & {
 
     // Give a higher z-index than the rich text editor.
-    z-index: 3;
+    z-index: 4;
 
     // When hovering the toolbar, give it a higher z-index than other toolbars
     // below so that the submenu will be on top of other toolbars.
     &:hover {
-      z-index: 4;
+      z-index: 5;
     }
   }
 
